--- a/src/PH.Disposable/PH.DisposableXUnitTest/PH.DisposableXUnitTest.csproj
+++ b/src/PH.Disposable/PH.DisposableXUnitTest/PH.DisposableXUnitTest.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PH.Disposable.LoggingExtensions\PH.Disposable.LoggingExtensions.csproj" />
     <ProjectReference Include="..\PH.Disposable\PH.Disposable.csproj" />
   </ItemGroup>
 
